test/bad/fieldpolicy/StaticFieldPolicyFromNonPolicy.para

public class StaticFieldPolicyFromNonPolicy {
    public static final int x = 3;
    public static final policy high = x;
}
